--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=attendance-automation-management-system
 spring.jpa.database=oracle
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.username=javadb
-spring.datasource.password=java123
+spring.datasource.username=test
+spring.datasource.password=test123
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
